--- a/src/ListGUI.form
+++ b/src/ListGUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ListGUI">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="720" height="400"/>
@@ -16,7 +16,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="fd941" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="fd941" class="javax.swing.JTextField" binding="dob">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -24,7 +24,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="ce00b" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+          <component id="ce00b" class="javax.swing.JTextField" binding="address">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -32,7 +32,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="f4efc" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+          <component id="f4efc" class="javax.swing.JTextField" binding="email">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -40,21 +40,25 @@
             </constraints>
             <properties/>
           </component>
-          <component id="d359e" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+          <component id="d359e" class="javax.swing.JTextField" binding="telephone">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value=""/>
+            </properties>
           </component>
-          <component id="39163" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+          <component id="39163" class="javax.swing.JTextField" binding="name">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value=""/>
+            </properties>
           </component>
           <component id="d07b2" class="javax.swing.JLabel">
             <constraints>
@@ -105,9 +109,11 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="69208" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+          <component id="69208" class="javax.swing.JTextArea" binding="output">
             <constraints/>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
